# pyresume

./: .gitignore  README.md  config.py  example.env  main.py  pyproject.toml
pyresume/: api.py  db.py  github.py  pyresume.py
tests/: test_pyresume.py
